console: fix ~ table icon alignment

--- a/console/src/components/Common/Layout/LeftSubSidebar/LeftSubSidebar.scss
+++ b/console/src/components/Common/Layout/LeftSubSidebar/LeftSubSidebar.scss
@@ -75,7 +75,7 @@
       padding: 7px 0;
       // color: $navbar-inverse-link-hover-color;
       transition: color 0.5s;
-      pointer: cursor;
+      cursor: pointer;
     }
   }
 }
